Adds interface for PermissionHandler and PermissionStore and implements both; defines Permission object and extends
Signed-off-by: Stephen Crawford <steecraw@amazon.com>